--- a/index.html
+++ b/index.html
@@ -1,19 +1,127 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portal</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/index.css" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="container">
+      <nav id="primary" class="grid grid-flow-col">
+        <div>
+          <img src="assets/svgs/List.svg" alt="lista menu" />
+          <strong>Menu</strong>
+        </div>
 
-    <h1>teste</h1>
-    <h2>subtest</h2>
-    <a href="">link</a>
-</body>
+        <div>
+          <img src="assets/Tech News.svg" alt="Logo" />
+        </div>
+
+        <div>
+          <strong>Buscar</strong>
+          <img src="assets/svgs/MagnifyingGlass.svg" alt="lupa" />
+        </div>
+      </nav>
+      <nav id="secondary" class="grid grid-flow-col">
+        <a href="#">Inteligência Artificial</a>
+        <a href="#">Blockchain</a>
+        <a href="#">Hologramas</a>
+        <a href="#">Internet</a>
+        <a href="#">Vestíveis</a>
+        <a href="#">Realidade Aumentada</a>
+        <a href="#">Realidade Virtual</a>
+      </nav>
+    </header>
+
+    <main class="grid container">
+      <section id="featured" class="grid grid-flow-col gap-16">
+        <figure class="card">
+          <img src="assets/img/Image 01.png" alt="" />
+          <figcaption>
+            <span class="content-tag">Robótica</span>
+            <h2 class="txt2xl">
+              Robôs domésticos começam a ser adotados para tarefas diárias,
+              prometendo mais conforto e eficiência nas residências.
+            </h2>
+          </figcaption>
+        </figure>
+
+        <div class="grid grid-col-2 gap-16">
+          <figure class="card">
+            <img src="assets/img/Image 02.png" alt="" />
+
+            <figcaption>
+              <span class="content-tag">Hologramas</span>
+              <h3 class="txtlg">
+                Novo Smartphone Projetor 3D chega ao mercado, transformando a
+                forma como vemos nossas telas!
+              </h3>
+            </figcaption>
+          </figure>
+
+          <figure class="card">
+            <img src="assets/img/Image 03.png" alt="" />
+
+            <figcaption>
+              <span class="content-tag">Internet</span>
+              <h3 class="txtlg">
+                Tecnologia 6G chega às metrópoles brasileiras, prometendo
+                revolucionar a forma como vivemos e nos comuni...
+              </h3>
+            </figcaption>
+          </figure>
+
+          <figure class="card">
+            <img src="assets/img/Image 04.png" alt="" />
+            <figcaption>
+              <span class="content-tag">Vestíveis</span>
+              <h3 class="txtlg">
+                Empresa lança relógio inteligente capaz de monitorar a saúde
+                mental, oferecendo insights valiosos para o...
+            </figcaption>
+          </figure>
+
+          <figure class="card">
+            <img src="assets/img/Image 05.png" alt="" />
+            <figcaption>
+              <span class="content-tag">Realidade Virtual</span>
+              <h3 class="txtlg">
+                Escolas adotam a tecnologia VR para proporcionar experiências
+                imersivas, transformando a aprendizagem tradi...
+              </h3>
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <section id="semana">
+            <header class="grid-flow-col">
+                <h3>Mais lidas da semana</h3>
+                <a href="" class="grid grid-flow-col">
+                <strong>Ver tudo</strong>
+                <span></span>
+                </a>
+            </header>
+
+            <div class="grid">
+
+                <figure>
+                    <span class="content-tag">Veículos</span>
+                    <img src="assets/img/Image 06.png" alt="" srcset="">
+                    <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...</p>
+                </figure>
+            </div>
+                
+     
+      </section>
+    </main>
+  </body>
 </html>
